@@ -737,16 +737,6 @@ struct _bfd_tilepro_elf_obj_tdata
    && elf_tdata (bfd) != NULL				\
    && elf_object_id (bfd) == TILEPRO_ELF_DATA)
 
-/* Allocate TILEPro ELF private object data.  */
-
-static bfd_boolean
-tilepro_elf_mkobject (bfd *abfd)
-{
-  return bfd_elf_allocate_object (abfd,
-				  sizeof (struct _bfd_tilepro_elf_obj_tdata),
-				  TILEPRO_ELF_DATA);
-}
-
 #include "elf/common.h"
 #include "elf/internal.h"
 
@@ -1115,7 +1105,7 @@ static int
 tilepro_plt_entry_build (asection *splt, asection *sgotplt, bfd_vma offset,
 		      bfd_vma *r_offset)
 {
-  int plt_index = (offset - PLT_ENTRY_SIZE) / PLT_ENTRY_SIZE;
+  int plt_index = (offset - PLT_HEADER_SIZE) / PLT_ENTRY_SIZE;
   int got_offset = plt_index * GOT_ENTRY_SIZE + GOTPLT_HEADER_SIZE;
   tilepro_bundle_bits *pc;
 
@@ -1868,33 +1858,11 @@ tilepro_elf_gc_mark_hook (asection *sec,
   if (h != NULL)
     {
       switch (ELF32_R_TYPE (rel->r_info))
-	{
-	case R_TILEPRO_GNU_VTINHERIT:
-	case R_TILEPRO_GNU_VTENTRY:
-	  return NULL;
-	}
-    }
-
-  /* FIXME: The test here, in check_relocs and in relocate_section
-     dealing with TLS optimization, ought to be !info->executable.  */
-  if (info->shared)
-    {
-      switch (ELF32_R_TYPE (rel->r_info))
-	{
-	case R_TILEPRO_TLS_GD_CALL:
-	  /* This reloc implicitly references __tls_get_addr.  We know
-	     another reloc will reference the same symbol as the one
-	     on this reloc, so the real symbol and section will be
-	     gc marked when processing the other reloc.  That lets
-	     us handle __tls_get_addr here.  */
-	  h = elf_link_hash_lookup (elf_hash_table (info), "__tls_get_addr",
-				    FALSE, FALSE, TRUE);
-	  BFD_ASSERT (h != NULL);
-	  h->mark = 1;
-	  if (h->u.weakdef != NULL)
-	    h->u.weakdef->mark = 1;
-	  sym = NULL;
-	}
+      {
+      case R_TILEPRO_GNU_VTINHERIT:
+      case R_TILEPRO_GNU_VTENTRY:
+	break;
+      }
     }
 
   return _bfd_elf_gc_mark_hook (sec, info, rel, h, sym);
@@ -2225,7 +2193,7 @@ allocate_dynrelocs (struct elf_link_hash_entry *h, void *inf)
 	  /* Allocate room for the header.  */
 	  if (s->size == 0)
 	    {
-	      s->size = PLT_ENTRY_SIZE;
+	      s->size = PLT_HEADER_SIZE;
 	    }
 
           h->plt.offset = s->size;
@@ -3124,7 +3092,7 @@ tilepro_elf_relocate_section (bfd *output_bfd, struct bfd_link_info *info,
 		  local_got_offsets[r_symndx] |= 1;
 		}
 	    }
-	  relocation = off - got_base;
+	  relocation = off;
 	  break;
 
         case R_TILEPRO_JOFFLONG_X1_PLT:
@@ -3543,7 +3511,7 @@ tilepro_elf_relocate_section (bfd *output_bfd, struct bfd_link_info *info,
 	  if (off >= (bfd_vma) -2)
 	    abort ();
 
-	  relocation = off - got_base;
+	  relocation = off;
 	  unresolved_reloc = FALSE;
 	  howto = tilepro_elf_howto_table + r_type;
 	  break;
@@ -3819,7 +3787,7 @@ tilepro_elf_finish_dynamic_symbol (bfd *output_bfd,
     }
 
   /* Mark some specially defined symbols as absolute. */
-  if (h == htab->elf.hdynamic
+  if (strcmp (h->root.root.string, "_DYNAMIC") == 0
       || (h == htab->elf.hgot || h == htab->elf.hplt))
     sym->st_shndx = SHN_ABS;
 
@@ -3899,11 +3867,7 @@ tilepro_elf_finish_dynamic_sections (bfd *output_bfd,
 
       /* Fill in the first entry in the procedure linkage table.  */
       if (splt->size > 0)
-	{
-	  memcpy (splt->contents, tilepro_plt0_entry, PLT_HEADER_SIZE);
-	  memset (splt->contents + PLT_HEADER_SIZE, 0,
-		  PLT_ENTRY_SIZE - PLT_HEADER_SIZE);
-	}
+        memcpy (splt->contents, tilepro_plt0_entry, PLT_HEADER_SIZE);
 
       elf_section_data (splt->output_section)->this_hdr.sh_entsize
 	= PLT_ENTRY_SIZE;
@@ -3960,7 +3924,7 @@ static bfd_vma
 tilepro_elf_plt_sym_val (bfd_vma i, const asection *plt,
                       const arelent *rel ATTRIBUTE_UNUSED)
 {
-  return plt->vma + (i + 1) * PLT_ENTRY_SIZE;
+  return plt->vma + PLT_HEADER_SIZE + i * PLT_ENTRY_SIZE;
 }
 
 static enum elf_reloc_type_class
@@ -4039,8 +4003,6 @@ tilepro_additional_program_headers (bfd *abfd,
 #define elf_backend_grok_prstatus            tilepro_elf_grok_prstatus
 #define elf_backend_grok_psinfo              tilepro_elf_grok_psinfo
 #define elf_backend_additional_program_headers tilepro_additional_program_headers
-
-#define bfd_elf32_mkobject		     tilepro_elf_mkobject
 
 #define elf_backend_init_index_section	_bfd_elf_init_1_index_section
 
