@@ -1,3 +1,9 @@
+2012-09-17  Walter Lee  <walt@tilera.com>
+
+	* elf32-tilepro.c (tilepro_elf_relocate_section): Fix computation
+	of got relocations for when .got.plt section is merged with .got.
+	* elfxx-tilegx.c (tilegx_elf_relocate_section): Ditto.
+
 2012-09-13  Doug Kwan  <dougkwan@google.com>
 
 	* elf64-ppc.c (ppc64_elf_relocate_section): Use pre-adjusted
